--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost:5432/electricity_keeper
 spring.datasource.username=k1-k0
+
+images.path=
