--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:postgresql://localhost:5432/electricity_keeper
-spring.datasource.username=k1-k0
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:postgresql://db:5432/electricity_keeper
+spring.datasource.username=keeper
+spring.datasource.password=keeper!
 
-images.path=
+images.path=/app/keeper/images
